--- a/articles/certification/TOC.yml
+++ b/articles/certification/TOC.yml
@@ -50,4 +50,4 @@
     - name: Glosario de certificación
       href: resources-glossary.md
     - name: Soporte técnico de MPN/Microsoft Partner Network
-      href: /partner-center
+      href: /partner-center/
