--- a/articles/analysis-services/TOC.yml
+++ b/articles/analysis-services/TOC.yml
@@ -104,13 +104,13 @@
     - name: PowerShell
       href: analysis-services-powershell.md
     - name: REST
-      href: /rest/api/analysisservices
+      href: /rest/api/analysisservices/
     - name: Plantilla de Resource Manager
       href: /azure/templates/microsoft.analysisservices/servers
     - name: DAX
-      href: /dax/data-analysis-expressions-dax-reference
+      href: /dax/
     - name: Power Query M
-      href: /powerquery-m/power-query-m-reference
+      href: /powerquery-m/
     - name: Tabular Model Scripting Language (TMSL)
       href: /analysis-services/tmsl/tabular-model-scripting-language-tmsl-reference?view=azure-analysis-services-current&preserve-view=true
     - name: Modelo de objetos tabulares (TOM)
@@ -126,7 +126,7 @@
     - name: Actualizaciones de Azure
       href: 'https://azure.microsoft.com/updates/?query=Analysis%20Services'
     - name: Estado de Azure
-      href: 'https://azure.microsoft.com/status/'
+      href: 'https://status.azure.com/'
     - name: Comentarios
       href: 'https://feedback.azure.com/d365community/forum/d92323a0-0525-ec11-b6e6-000d3a4f0858'
     - name: Precios
