--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -124,7 +124,7 @@
           href: tutorial-manage-web-traffic-cli.md
     - name: Configuración del equilibrador de carga interno
       items:
-        - name: Portal de Azure
+        - name: Azure portal
           href: configure-application-gateway-with-private-frontend-ip.md
         - name: Azure PowerShell
           href: application-gateway-ilb-arm.md
@@ -216,7 +216,7 @@
               href: redirect-external-site-cli.md
         - name: HTTP a HTTPS
           items:
-            - name: Portal de Azure
+            - name: Azure portal
               href: redirect-http-to-https-portal.md
             - name: Azure PowerShell
               href: redirect-http-to-https-powershell.md
@@ -295,15 +295,15 @@
     - name: Azure PowerShell
       href: /powershell/azure/
     - name: .NET
-      href: /dotnet/api
+      href: /dotnet/api/
     - name: Java
-      href: /java/api
+      href: /java/api/
     - name: Node.js
       href: 'https://azure.microsoft.com/develop/nodejs/#azure-sdk'
     - name: Python
       href: 'https://azure.microsoft.com/develop/python/'
     - name: REST
-      href: /rest/api/applicationgateway
+      href: /rest/api/application-gateway/application-gateways
     - name: Azure Resource Manager
       displayName: ARM
       href: ../azure-resource-manager/management/overview.md
@@ -319,10 +319,10 @@
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Plantillas de la comunidad
       displayName: ARM
-      href: 'https://azure.microsoft.com/documentation/templates'
+      href: 'https://azure.microsoft.com/resources/templates/'
     - name: Precios
       href: 'https://azure.microsoft.com/pricing/details/application-gateway/'
     - name: Disponibilidad regional
-      href: 'https://azure.microsoft.com/regions/services/'
+      href: 'https://azure.microsoft.com/global-infrastructure/services/'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-application-gateway'
