--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -88,7 +88,7 @@
         - name: "Incorporación a Microsoft\_Azure\_Sentinel"
           href: scenario-onboard-azure-sentinel.md
         - name: "Incorporación a Microsoft\_Defender\_for\_Cloud"
-          href: ../../security-center/quickstart-onboard-machines.md
+          href: ../../defender-for-cloud/quickstart-onboard-machines.md
     - name: Solución de problemas
       items:
         - name: Problemas de conexión del agente
@@ -102,13 +102,13 @@
     - name: Azure CLI
       href: /cli/azure/connectedmachine
     - name: Azure PowerShell
-      href: /powershell/module/az.connectedmachine
+      href: /powershell/module/az.connectedmachine/
     - name: .NET
       href: /dotnet/api/overview/azure/hybridcompute/management
     - name: Azure Stack HCI REST
-      href: /rest/api/stackhci
+      href: /rest/api/stackhci/
     - name: REST
-      href: /rest/api/hybridcompute
+      href: /rest/api/hybridcompute/
     - name: Go
       href: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/hybridcompute/mgmt/2020-08-02/hybridcompute'
     - name: Java
