--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -80,7 +80,7 @@
     - name: Functions con Logic Apps
       href: functions-twitter-email.md
     - name: "Desarrollo de funciones de Python con VS\_Code"
-      href: /azure/python/tutorial-vs-code-serverless-python-01
+      href: /azure/azure-functions/create-first-function-vs-code-python
     - name: "Creación de API sin servidor mediante Visual\_Studio"
       href: openapi-apim-integrate-visual-studio.md
       displayName: 'OpenAPI, Swagger'
@@ -102,7 +102,7 @@
     - name: Cambio de tamaño de una imagen con Event Grid
       href: ../event-grid/resize-images-on-storage-blob-upload-event.md?toc=%2fazure%2fazure-functions%2ftoc.json
     - name: Creación de una aplicación web sin servidor
-      href: /learn/modules/automatic-update-of-a-webapp-using-azure-functions-and-signalr
+      href: /learn/modules/automatic-update-of-a-webapp-using-azure-functions-and-signalr/
     - name: Machine Learning con TensorFlow
       href: functions-machine-learning-tensorflow.md
     - name: Clasificación de imágenes con PyTorch
@@ -528,7 +528,7 @@
         - name: "Azure\_Functions\_Core\_Tools"
           href: functions-core-tools-reference.md
         - name: Azure PowerShell
-          href: /powershell/module/az.functions
+          href: /powershell/module/az.functions/
         - name: Java
           href: /java/api/overview/azure/functions/runtime
         - name: Python
@@ -551,7 +551,7 @@
             - name: Output
               displayName: Blob storage
               href: functions-bindings-storage-blob-output.md
-        - name: "Azure Cosmos\_DB"
+        - name: Azure Cosmos DB
           items:
             - name: Functions 1.x
               href: functions-bindings-cosmosdb.md
@@ -735,7 +735,7 @@
     - name: Información de cuota
       href: functions-scale.md#service-limits
     - name: Disponibilidad regional
-      href: 'https://azure.microsoft.com/regions/services/'
+      href: 'https://azure.microsoft.com/global-infrastructure/services/'
     - name: Vídeos
       href: 'https://www.youtube.com/c/AzureFunctions'
     - name: Página de preguntas y respuestas de Microsoft
