--- a/articles/azure-resource-manager/managed-applications/toc.yml
+++ b/articles/azure-resource-manager/managed-applications/toc.yml
@@ -17,7 +17,7 @@
       href: tutorial-create-managed-app-with-custom-provider.md
 - name: Ejemplos
   items:
-    - name: CLI de Azure
+    - name: Azure CLI
       href: cli-samples.md
     - name: Azure PowerShell
       href: powershell-samples.md
@@ -78,7 +78,7 @@
     - name: Azure CLI
       href: /cli/azure/managedapp
     - name: PowerShell
-      href: /powershell/module/az.resources
+      href: /powershell/module/az.resources/
     - name: REST
       href: /rest/api/resources/
     - name: Funciones de la interfaz de usuario
