--- a/articles/azure-resource-manager/management/toc.yml
+++ b/articles/azure-resource-manager/management/toc.yml
@@ -137,7 +137,7 @@
           href: manage-private-link-access-rest.md
     - name: Administración de grupos de recursos
       items:
-        - name: Portal de Azure
+        - name: Azure portal
           displayName: 'create,list,open,delete,deploy,move,lock,tag,export'
           href: manage-resource-groups-portal.md
         - name: Azure CLI
@@ -148,7 +148,7 @@
           href: manage-resource-groups-powershell.md
     - name: Administrar recursos
       items:
-        - name: Portal de Azure
+        - name: Azure portal
           displayName: 'open,delete,deploy,move,lock,tag,monitor'
           href: manage-resources-portal.md
         - name: Azure CLI
@@ -176,7 +176,7 @@
     - name: REST
       href: /rest/api/resources/
     - name: Azure PowerShell
-      href: /powershell/module/az.resources
+      href: /powershell/module/az.resources/
     - name: Azure CLI
       href: /cli/azure/resource
     - name: .NET
