--- a/articles/azure-resource-manager/troubleshooting/toc.yml
+++ b/articles/azure-resource-manager/troubleshooting/toc.yml
@@ -63,8 +63,8 @@
     - name: REST
       href: /rest/api/resources/
     - name: Azure PowerShell
-      href: /powershell/module/az.resources
-    - name: CLI de Azure
+      href: /powershell/module/az.resources/
+    - name: Azure CLI
       href: /cli/azure/resource
     - name: .NET
       href: /dotnet/api/microsoft.azure.management.resourcemanager
