--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -133,7 +133,7 @@
     - name: API DE REST
       href: 'https://github.com/Azure/azure-signalr/blob/dev/docs/rest-api.md'
     - name: ASP.NET Core SignalR
-      href: /aspnet/core/signalr
+      href: /aspnet/core/signalr/introduction
     - name: Protocolo de Azure SignalR Service
       href: 'https://github.com/Azure/azure-signalr/blob/dev/specs/ServiceProtocol.md'
     - name: Elementos integrados de Azure Policy
@@ -146,7 +146,7 @@
     - name: Testimonios de clientes
       href: 'https://customers.microsoft.com/en-us/search?sq=signalr'
     - name: Hoja de ruta de SignalR
-      href: 'https://github.com/aspnet/Home/wiki/Roadmap'
+      href: 'https://github.com/dotnet/aspnetcore/wiki/'
     - name: Actualizaciones del servicio
       href: 'https://azure.microsoft.com/updates/'
     - name: Disponibilidad en regiones
@@ -164,4 +164,4 @@
     - name: Twitter
       href: 'https://twitter.com/SignalR'
     - name: Foros de ASP.NET
-      href: 'https://forums.asp.net/1254.aspx'
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=aspsignalr'
