--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -260,7 +260,7 @@
             - name: Indexación con Azure Cognitive Search
               href: ../search/search-howto-connecting-azure-sql-database-to-azure-search-using-indexers.md?toc=%2fazure%2fazure-sql%2ftoc.json
             - name: Integración de CLR/.NET en el lado del servidor
-              href: /sql/relational-databases/clr-integration/common-language-runtime-integration-overview?toc=%2fazure%2fazure-sql%2ftoc.json
+              href: /sql/relational-databases/clr-integration/common-language-runtime-integration-overview?toc=/azure/azure-sql/toc.json
             - name: Java
               items:
                 - name: Uso de Java y JDBC
@@ -514,7 +514,7 @@
             - name: Conexión y ejecución de consultas ad hoc
               items:
                 - name: Azure Data Studio
-                  href: /sql/azure-data-studio/quickstart-sql-database?toc=%2Fazure%2Fazure-sql%2Ftoc.json
+                  href: /sql/azure-data-studio/quickstart-sql-database?toc=/azure/azure-sql/toc.json
                 - name: SSMS
                   href: database/connect-query-ssms.md
                 - name: Azure portal
@@ -978,9 +978,9 @@
                 - name: Implementación
                   items:
                     - name: Operacionalización mediante procedimientos almacenados
-                      href: /sql/machine-learning/r/operationalizing-your-r-code?context=%2fazure%2fazure-sql%2fmanaged-instance%2fcontext%2fml-context&preserve-view=true&view=azuresqldb-mi-current
+                      href: /sql/machine-learning/tutorials/python-ski-rental-linear-regression-deploy-model?view=azuresqldb-mi-current&preserve-view=true
                     - name: Conversión de código de R para SQL Server
-                      href: /sql/machine-learning/r/converting-r-code-for-use-in-sql-server?context=%2fazure%2fazure-sql%2fmanaged-instance%2fcontext%2fml-context&preserve-view=true&view=azuresqldb-mi-current
+                      href: /sql/machine-learning/deploy/modify-r-python-code-to-run-in-sql-server?view=azuresqldb-mi-current&preserve-view=true
                     - name: Crear un procedimiento almacenado mediante sqlrutils
                       href: /sql/machine-learning/r/reference/sqlrutils/how-to-create-stored-procedure-from-r
                 - name: Predicciones
@@ -1026,11 +1026,11 @@
         - name: Características
           items:
             - name: Servidores vinculados
-              href: /sql/relational-databases/linked-servers/linked-servers-database-engine?toc=%2fazure%2fazure-sql%2ftoc.json
+              href: /sql/relational-databases/linked-servers/linked-servers-database-engine?toc=/azure/azure-sql/toc.json
             - name: Service Broker
-              href: /sql/database-engine/configure-windows/sql-server-service-broker?toc=%2fazure%2fazure-sql%2ftoc.json
+              href: /sql/database-engine/configure-windows/sql-server-service-broker?toc=/azure/azure-sql/toc.json
             - name: Correo electrónico de base de datos
-              href: /sql/relational-databases/database-mail/database-mail?toc=%2fazure%2fazure-sql%2ftoc.json
+              href: /sql/relational-databases/database-mail/database-mail?toc=/azure/azure-sql/toc.json
         - name: Seguridad
           items:
             - name: Always Encrypted
@@ -1397,7 +1397,7 @@
     - name: Azure CLI
       href: /cli/azure/azure-cli-reference-for-sql
     - name: Azure PowerShell
-      href: /powershell/module/az.sql
+      href: /powershell/module/az.sql/
     - name: .NET
       href: /dotnet/api/microsoft.azure.management.sql.models
     - name: Java
@@ -1418,13 +1418,13 @@
     - name: SQLCMD
       href: /sql/tools/sqlcmd-utility
     - name: SqlPackage
-      href: /sql/tools/sqlpackage?toc=%2fazure%2fazure-sql%2ftoc.json
+      href: /sql/tools/sqlpackage/sqlpackage?toc=/azure/azure-sql/toc.json
     - name: Paquete de la biblioteca de administración de SQL Database
       href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.Sql'
     - name: Controladores de conexión a SQL
       href: /sql/connect/sql-connection-libraries
     - name: Controladores de SQL Server
-      href: /sql/connect/sql-server-drivers
+      href: /sql/connect/sql-connection-libraries
       items:
         - name: ADO.NET
           href: /sql/connect/ado-net/microsoft-ado-net-sql-server?view=sql-server-ver15&preserve-view=true
@@ -1456,11 +1456,11 @@
     - name: Conjuntos de datos públicos
       href: public-data-sets.md
     - name: Precios
-      href: 'https://azure.microsoft.com/pricing/details/sql-database/'
+      href: 'https://azure.microsoft.com/pricing/details/azure-sql-database/single/'
     - name: Foro de MSDN
-      href: 'https://social.msdn.microsoft.com/Forums/home?forum=ssdsgetstarted'
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home'
     - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/sql-azure'
+      href: 'https://stackoverflow.com/questions/tagged/azure-sql-database'
     - name: Solución de problemas
       items:
         - name: Problemas conocidos con Azure SQL Managed Instance
@@ -1490,7 +1490,7 @@
     - name: Vídeos
       href: 'https://azure.microsoft.com/documentation/videos/index/?services=sql-database'
     - name: Actualizaciones del servicio
-      href: 'https://azure.microsoft.com/updates/?service=sql-database'
+      href: 'https://azure.microsoft.com/updates/?product=sql-database'
     - name: Centro de arquitectura
       href: /azure/architecture/
     - name: Testimonios de clientes
