--- a/articles/azure-video-analyzer/video-analyzer-for-media-docs/toc.yml
+++ b/articles/azure-video-analyzer/video-analyzer-for-media-docs/toc.yml
@@ -119,7 +119,7 @@
     - name: Precios
       href: 'https://azure.microsoft.com/pricing/details/media-services/'
     - name: Disponibilidad regional
-      href: 'https://azure.microsoft.com/regions/services/'
+      href: 'https://azure.microsoft.com/global-infrastructure/services/'
     - name: Regions
       displayName: location
       href: regions.md
