--- a/articles/bastion/TOC.yml
+++ b/articles/bastion/TOC.yml
@@ -84,9 +84,9 @@
 - name: Referencia
   items:
     - name: Azure PowerShell
-      href: /powershell/module/az.network
+      href: /powershell/module/az.network/
     - name: REST
-      href: /rest/api/virtualnetwork/bastionhosts
+      href: /rest/api/virtualnetwork/bastion-hosts
     - name: Azure CLI
       href: /cli/azure/network/bastion
 - name: Recursos
@@ -94,9 +94,9 @@
     - name: Azure Roadmap
       href: 'https://azure.microsoft.com/roadmap/?category=networking'
     - name: Blog
-      href: 'https://azure.microsoft.com/blog/topics/networking'
+      href: 'https://azure.microsoft.com/blog/topics/networking/'
     - name: Precios
-      href: 'https://azure.microsoft.com/pricing/details/azure-bastion'
+      href: 'https://azure.microsoft.com/pricing/details/azure-bastion/'
     - name: Página de preguntas y respuestas de Microsoft
       href: /answers/topics/azure-virtual-network.html
     - name: Vista previa del Acuerdo de Nivel de Servicio
