--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -44,7 +44,7 @@
         - name: Ejemplos de código de Azure
           href: 'https://azure.microsoft.com/resources/samples/?service=batch'
         - name: Repositorio de ejemplos de Batch
-          href: 'https://github.com/Azure/azure-batch-samples'
+          href: 'https://github.com/Azure-Samples/azure-batch-samples'
     - name: Azure CLI
       items:
         - name: Creación de una cuenta de Batch en modo de servicio de Batch
@@ -280,7 +280,7 @@
     - name: Azure CLI
       href: /cli/azure/batch
     - name: Azure PowerShell
-      href: /powershell/module/az.batch
+      href: /powershell/module/az.batch/
     - name: .NET
       href: /dotnet/api/overview/azure/batch
     - name: Java
@@ -292,7 +292,7 @@
     - name: REST
       items:
         - name: Servicio Batch
-          href: /rest/api/batchservice
+          href: /rest/api/batchservice/
         - name: Administración de Batch
           href: /rest/api/batchmanagement/
     - name: Plantilla de Resource Manager
@@ -338,7 +338,7 @@
     - name: Blog
       href: /archive/blogs/windowshpc/
     - name: Informática de alto rendimiento en Azure
-      href: /azure/architecture/topics/high-performance-computing/
+      href: /azure/architecture/topics/high-performance-computing
     - name: Página de preguntas y respuestas de Microsoft para Batch
       href: /answers/topics/azure-batch.html
     - name: Precios
