--- a/articles/chaos-studio/TOC.yml
+++ b/articles/chaos-studio/TOC.yml
@@ -71,18 +71,18 @@
     - name: Límites de servicio
       href: chaos-studio-service-limits.md
     - name: Documentación de la API de REST
-      href: 'https://docs.microsoft.com/rest/api/chaosstudio'
+      href: /rest/api/chaosstudio/
     - name: SDK de Python
-      href: 'https://docs.microsoft.com/python/api/azure-mgmt-chaos/?view=azure-python-preview'
+      href: /python/api/azure-mgmt-chaos/?view=azure-python-preview
 - name: Recursos
   items:
     - name: Azure Roadmap
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Precios
-      href: 'https://azure.microsoft.com/pricing/details/'
+      href: 'https://azure.microsoft.com/pricing/'
     - name: Calculadora de precios
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Actualizaciones del servicio
       href: 'https://azure.microsoft.com/updates/?product='
     - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/'
+      href: 'https://stackoverflow.com/questions'
