--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -5,7 +5,7 @@
     - name: ¿Qué es Azure Front Door?
       href: front-door-overview.md
     - name: Elección del equilibrador de carga correcto
-      href: /architecture/guide/technology-choices/load-balancing-overview.md?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
+      href: /azure/architecture/guide/technology-choices/load-balancing-overview?toc=%2fazure%2ffrontdoor%2fstandard-premium%2ftoc.json
 - name: Guías de inicio rápido
   expanded: true
   items:
